fixed r/sub1+sub2+...+sub100 causing overflows

--- a/src/static/scripts/components/global/header/_header.scss
+++ b/src/static/scripts/components/global/header/_header.scss
@@ -142,6 +142,12 @@
 			&:empty {
 				display: none !important;
 			}
+
+			.feedTitle {
+				max-width: 12rem;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 
 		#loginButton {
